--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,9 @@ p {
   padding: 0.625em;
   text-align: center;
 }
+
+.box1, .box2, .box3 {
+  width: 90%;
+  margin: 0 auto;
+  padding: 0.625em;
+}
