--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ p {
   text-align: center;
 }
 
-.box1, .box2, .box3 {
+.box1, .box2, .box3, .box4 {
   width: 90%;
   margin: 0 auto;
   padding: 0.625em;
