--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,11 @@ p {
   margin: 0 auto;
   padding: 0.625em;
 }
+
+.box2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
