Centering flexbox items

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ p {
 .box {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
 }
