--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,13 @@ p {
   text-align: center;
 }
 
-.box {
+.box1, .box2 {
   width: 90%;
   margin: 0 auto;
   padding: 0.625em;
 }
 
-.box {
+.box2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
