--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,11 @@ p {
   align-items: center;
   flex-wrap: nowrap;
 }
+
+.box2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+}
