--- a/css/style.css
+++ b/css/style.css
@@ -37,14 +37,20 @@ p {
 
 .float_container {
   border: solid 1px #ccc;
+  padding: 0 8px;
   position: relative;
 }
 
 .float_container input {
   border: none;
+  font-size: 16px;
   outline: 0;
+  padding: 16px 0 10px;
 }
 
 label {
   position: absolute;
+  font-size: 16px
 }
+
+
