--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,12 @@ p {
 
 label {
   position: absolute;
-  font-size: 16px
+  font-size: 16px;
+  transform: translate(0, 16px) scale(1);
+}
+
+.float_container.active label {
+  transform: translate(0, 4px) scale(.75);
 }
 
 
